@@ -22,6 +22,7 @@ package Paws::API::ServiceToClass;
     codecommit => 'CodeCommit',
     codedeploy => 'CodeDeploy',
     codepipeline => 'CodePipeline',
+    codestar => 'CodeStar',
    'cognito-identity' => 'CognitoIdentity',
    'cognito-idp' => 'CognitoIdp',
    'cognito-sync' => 'CognitoSync',
@@ -63,6 +64,7 @@ package Paws::API::ServiceToClass;
     kinesisanalytics => 'KinesisAnalytics',
     kms => 'KMS',
     lambda => 'Lambda',
+   'lex-models' => 'LexModels',
    'lex-runtime' => 'LexRuntime',
     lightsail => 'Lightsail',
     logs => 'CloudWatchLogs',
