@@ -7,6 +7,8 @@
  - New API: MTurk (Mechanical Turk)
  - New API: WorkDocs
  - New API: ResourceTagging
+ - New API: CodeStar
+ - New API: LexModels
  - CodeCommit API update
  - ELBv2 API update
  - ECS API update 
@@ -34,6 +36,11 @@
  - CloudDirectory API update
  - CloudWatch API update
  - ElastiCache API update
+ - ApiGateway API update
+ - Lambda API update
+ - Polly API update
+ - Redshift API update
+ - Rekognition API update
 
 0.31 01 Feb 2017 
  - Bug fixed: Services that use QueryCaller and EC2Caller were not serializing Booleans correctly
